sincronizar template, usar formGroup e evento ngSubmit e associar eventos a métodos na classe do componente

--- a/angular-indexa/src/app/paginas/formulario-contato/formulario-contato.component.html
+++ b/angular-indexa/src/app/paginas/formulario-contato/formulario-contato.component.html
@@ -10,12 +10,13 @@
         </section>
     </header>
 
-    <form>
+    <form [formGroup]="contatoForm" (ngSubmit)="salvarContato()">
         <label for="nome">Nome</label>
         <input 
             type="text"
             id="nome"
             placeholder="Digite o nome do contato"
+            formControlName="nome"
         >
 
         <label for="telefone">Telefone</label>
@@ -23,6 +24,7 @@
             type="text"
             id="telefone"
             placeholder="Digite o telefone do contato"
+            formControlName="telefone"
         >
         
         <label for="email">E-mail</label>
@@ -30,6 +32,7 @@
             type="email"
             id="email"
             placeholder="Digite o email do contato"
+            formControlName="email"
         >
 
         <app-separador></app-separador>
@@ -38,6 +41,7 @@
             type="date"
             id="aniversario"
             placeholder="Data de nascimento"
+            formControlName="aniversario"
         >
 
         <label for="redes">Redes sociais</label>
@@ -47,17 +51,19 @@
                 type="url"
                 id="redes"
                 placeholder="Adicione a URL da página"
+                formControlName="redes"
             >
         </div>
 
         <textarea
-            type="url"
-            id="redes"
+            type="text"
+            id="observacoes"
             placeholder="Coloque observações nesse espaço. Exemplo: Instrutora da academia Nova Imagem, amiga da Júlia."
+            formControlName="observacoes"
         ></textarea>
 
         <section class="botoes">
-            <button class="botao-cancelar" type="button">Cancelar</button>
+            <button (click)="cancelar()" class="botao-cancelar" type="button">Cancelar</button>
             <button class="botao-salvar" type="submit">Salvar contato</button>
         </section>        
     </form>
