implementado validações usando Validators, utilizado mensagens condicionais com @if e estilizado botão de forma condicional com diretiva ngClass

--- a/angular-indexa/src/app/paginas/formulario-contato/formulario-contato.component.html
+++ b/angular-indexa/src/app/paginas/formulario-contato/formulario-contato.component.html
@@ -19,6 +19,12 @@
             formControlName="nome"
         >
 
+        @if(contatoForm.get('nome')?.errors && contatoForm.get('nome')?.touched){
+            <div class="mensagem-erro">
+                Campo obrigatório
+            </div>
+        }
+
         <label for="telefone">Telefone</label>
         <input 
             type="text"
@@ -26,6 +32,12 @@
             placeholder="Digite o telefone do contato"
             formControlName="telefone"
         >
+
+        @if(contatoForm.get('telefone')?.errors && contatoForm.get('telefone')?.touched){
+            <div class="mensagem-erro">
+                Campo obrigatório
+            </div>
+        }
         
         <label for="email">E-mail</label>
         <input 
@@ -34,6 +46,18 @@
             placeholder="Digite o email do contato"
             formControlName="email"
         >
+
+        @if(contatoForm.get('email')?.errors?.['required'] && contatoForm.get('email')?.touched){
+            <div class="mensagem-erro">
+                Campo obrigatório
+            </div>
+        }
+
+        @if(contatoForm.get('email')?.errors?.['email'] && contatoForm.get('email')?.touched){
+            <div class="mensagem-erro">
+                Formato de e-mail inválido
+            </div>
+        }
 
         <app-separador></app-separador>
         <label for="aniversario">Aniversário</label>
@@ -64,7 +88,11 @@
 
         <section class="botoes">
             <button (click)="cancelar()" class="botao-cancelar" type="button">Cancelar</button>
-            <button class="botao-salvar" type="submit">Salvar contato</button>
+            <button 
+                [ngClass]="contatoForm.valid ? 'botao-salvar' : 'botao-desabilitado'"
+                type="submit"
+                [disabled]="contatoForm.invalid"
+                >Salvar contato</button>
         </section>        
     </form>
 
