--- a/angular-indexa/src/app/paginas/formulario-contato/formulario-contato.component.html
+++ b/angular-indexa/src/app/paginas/formulario-contato/formulario-contato.component.html
@@ -1,7 +1,13 @@
-<app-container>
-    <header>
+<app-container>        
+    <header>                                
         <section class="cabecalho-link">
             <img src="../../../assets/logo.png" alt="">
+            <div>
+                <button>
+                    <img class="seta"  src="../../../assets/Imagens/arrow-left.png" alt="">
+                    <a routerLink="/lista-contatos">Voltar</a>
+                </button>
+            </div>     
         </section>
 
         <section class="cabecalho-contato">
