--- a/angular-indexa/src/app/componentes/container/container.component.css
+++ b/angular-indexa/src/app/componentes/container/container.component.css
@@ -5,8 +5,7 @@
     box-shadow: 0px 8px 16px 0px rgba(61, 139, 253, 0.15);
     width: 684px;
     max-width: 90%;
-    margin: 0 auto;
-    padding: 56px 134px;
-    margin-top: 80px;
+    margin: 80px auto;
+    padding: 56px 134px;    
     box-sizing: border-box;
 }
