--- a/life-cycle/src/app/app.component.html
+++ b/life-cycle/src/app/app.component.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="lista">
       <h4 class="title-list">Lista de Compras</h4>
-      <div *ngFor="let item of listaDeCompras">
+      <div *ngFor="let item of listaDeCompra">
         <app-item [item]="item"></app-item>
       </div>
     </div>
